--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+.idea/
 /examples/
 __pycache__
+/logs/
